--- a/src/app/components/redirection/redirection.component.scss
+++ b/src/app/components/redirection/redirection.component.scss
@@ -38,8 +38,14 @@
         .redirect-heading {
             font-weight: 700;
         }
+        .not-redirected-text {
+            font-size: 80%;
+        }
         .redirect-text {
             font-size: 90%;
+        }
+        .project-img {
+            height: 20px;
         }
         .m-b-10 {
             margin-bottom: 10px;
