SVG update & Loader screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
         <router-outlet></router-outlet>
     }
 } @else {
-    Unable to load Data. Please reach out through
-    <a href="https://instagram.com/miehikasahu">Instagram</a>
+    <div class="loader-screen">
+        <img class="logo-img" src="assets/logo.png" alt="" />
+    </div>
 }
